fix: aligning this repo with paragon standards

--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,6 +1,5 @@
 .hero {
   background-color: $primary-700;
-  padding: 0px 16px;
   white-space: pre-line;
 }
 
